--- a/objects/transcripciones/quijote_avellaneda.html
+++ b/objects/transcripciones/quijote_avellaneda.html
@@ -24,7 +24,33 @@ title: quijote_avellaneda
    <p>Después de haber sido llevado (...)</p>
    
    
+   
+   
+   
    <p class="folio"> 
       Folio: 1v</p>
+   
+   
+   
+   <p><a class="pop-annotation" tabindex="0" id="quijote">don Quijote</a> por el cura y el barbero y la hermosa <a class="pop-annotation" tabindex="0" id="">Dorotea</a> a su lugar en una jaula, con <a class="pop-annotation" tabindex="0" id="">Sancho Panza</a>, su escudero, fue metido en un aposento con una muy gruesa y pesada cadena al pie,
+      adonde, no con pequeño regalo de pistos y cosas conservativas y sustanciales, le volvieron
+      poco a poco a su natural juicio. Y para que no volviese a los antiguos desvanecimientos
+      de sus fabulosos libros de caballerías, pasados algunos días de su encerramiento,
+      empezó con mucha instancia a rogar a <a class="pop-annotation" tabindex="0" id="">Madalena</a>, su sobrina, que le buscase algún buen libro en que poder entretener aquellos setecientos
+      años que él pensaba estar en aquel duro encantamiento. La cual, por consejo del cura
+      <a class="pop-annotation" tabindex="0" id="">Pedro Pérez</a> y de maese <a class="pop-annotation" tabindex="0" id="">Nicolás</a>, barbero, le dio un Flos sanctorum de Villegas y los Evangelios y Epístolas de todo
+      el año en vulgar, y la Guía de pecadores de <a class="pop-annotation" tabindex="0" id="">fray Luis de Granada</a>; con la cual lición, olvidándose de las quimeras de los caballeros andantes, fue
+      reducido dentro de seis meses a su antiguo juicio y suelto de la prisión en que estaba.
+      Comenzó tras esto a ir a misa con su rosario en las manos, con las Horas de Nuestra
+      Señora, oyendo también con mucha atención los sermones; de tal manera, que ya todos
+      los vecinos del lugar pensaban que totalmente estaba sano de su accidente y daban
+      muchas gracias a Dios, sin osarle decir ninguno, por consejo del cura, cosa de las
+      que </p>
+   
+   
+   
+   <p class="folio"> 
+      Folio: 2r</p>
+   
    
    </div>
