--- a/objects/transcripciones/quijote_avellaneda.html
+++ b/objects/transcripciones/quijote_avellaneda.html
@@ -32,20 +32,19 @@ title: quijote_avellaneda
    
    
    
-   <p><a class="pop-annotation" tabindex="0" id="quijote">don Quijote</a> por el cura y el barbero y la hermosa <a class="pop-annotation" tabindex="0" id="">Dorotea</a> a su lugar en una jaula, con <a class="pop-annotation" tabindex="0" id="">Sancho Panza</a>, su escudero, fue metido en un aposento con una muy gruesa y pesada cadena al pie,
+   <p><a class="pop-annotation" tabindex="0" id="quijote">don Quijote</a> por el <a class="pop-annotation" tabindex="0" id="pedro">cura</a> y el <a class="pop-annotation" tabindex="0" id="nicolás">barbero</a> y la hermosa <a class="pop-annotation" tabindex="0" id="dorotea">Dorotea</a> a su lugar en una jaula, con <a class="pop-annotation" tabindex="0" id="sancho">Sancho Panza</a>, su escudero, fue metido en un aposento con una muy gruesa y pesada cadena al pie,
       adonde, no con pequeño regalo de pistos y cosas conservativas y sustanciales, le volvieron
       poco a poco a su natural juicio. Y para que no volviese a los antiguos desvanecimientos
       de sus fabulosos libros de caballerías, pasados algunos días de su encerramiento,
-      empezó con mucha instancia a rogar a <a class="pop-annotation" tabindex="0" id="">Madalena</a>, su sobrina, que le buscase algún buen libro en que poder entretener aquellos setecientos
+      empezó con mucha instancia a rogar a <a class="pop-annotation" tabindex="0" id="madalena">Madalena</a>, su sobrina, que le buscase algún buen libro en que poder entretener aquellos setecientos
       años que él pensaba estar en aquel duro encantamiento. La cual, por consejo del cura
-      <a class="pop-annotation" tabindex="0" id="">Pedro Pérez</a> y de maese <a class="pop-annotation" tabindex="0" id="">Nicolás</a>, barbero, le dio un Flos sanctorum de Villegas y los Evangelios y Epístolas de todo
-      el año en vulgar, y la Guía de pecadores de <a class="pop-annotation" tabindex="0" id="">fray Luis de Granada</a>; con la cual lición, olvidándose de las quimeras de los caballeros andantes, fue
+      <a class="pop-annotation" tabindex="0" id="pedro">Pedro Pérez</a> y de maese <a class="pop-annotation" tabindex="0" id="nicolás">Nicolás</a>, barbero, le dio un <a class="pop-annotation" tabindex="0" id="f1vnota1">Flos sanctorum</a> de <a class="pop-annotation" tabindex="0" id="villegas">Villegas</a> y los <a class="pop-annotation" tabindex="0" id="f1vnota2">Evangelios y Epístolas de todo el año</a> en vulgar, y la <a class="pop-annotation" tabindex="0" id="f1vnota3">Guía de pecadores</a> de <a class="pop-annotation" tabindex="0" id="fray luis">fray Luis de Granada</a>; con la cual lición, olvidándose de las quimeras de los caballeros andantes, fue
       reducido dentro de seis meses a su antiguo juicio y suelto de la prisión en que estaba.
-      Comenzó tras esto a ir a misa con su rosario en las manos, con las Horas de Nuestra
-      Señora, oyendo también con mucha atención los sermones; de tal manera, que ya todos
-      los vecinos del lugar pensaban que totalmente estaba sano de su accidente y daban
-      muchas gracias a Dios, sin osarle decir ninguno, por consejo del cura, cosa de las
-      que </p>
+      Comenzó tras esto a ir a misa con su rosario en las manos, con las <a class="pop-annotation" tabindex="0" id="f1vnota4">Horas de Nuestra Señora</a>, oyendo también con mucha atención los sermones; de tal manera, que ya todos los
+      vecinos del lugar pensaban que totalmente estaba sano de su accidente y daban muchas
+      gracias a Dios, sin osarle decir ninguno, por consejo del cura, cosa de las que </p>
+   
+   
    
    
    
